--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,15 +27,14 @@ arrow-schema = { version = "53", default-features = false }
 clap = { version = "3", features = ["derive", "cargo"] }
 configure_me = { version = "0.4.0" }
 configure_me_codegen = { version = "0.4.4" }
-# bump directly to datafusion v43 to avoid the serde bug on v42 (https://github.com/apache/datafusion/pull/12626)
-datafusion = "42.0.0"
-datafusion-cli = "42.0.0"
-datafusion-proto = "42.0.0"
-datafusion-proto-common = "42.0.0"
+datafusion = { git = "https://github.com/apache/datafusion.git", rev = "e22d23113f549a90483bbf161add84eba08510fd", features = ["backtrace"] }
+datafusion-cli = { git = "https://github.com/apache/datafusion.git", rev = "e22d23113f549a90483bbf161add84eba08510fd" }
+datafusion-proto = { git = "https://github.com/apache/datafusion.git", rev = "e22d23113f549a90483bbf161add84eba08510fd" }
+datafusion-proto-common = { git = "https://github.com/apache/datafusion.git", rev = "e22d23113f549a90483bbf161add84eba08510fd" }
 object_store = "0.11"
 prost = "0.13"
 prost-types = "0.13"
-sqlparser = "0.50"
+sqlparser = "0.51"
 tonic = { version = "0.12" }
 tonic-build = { version = "0.12", default-features = false, features = [
     "transport",
